--- a/Curriculo.html
+++ b/Curriculo.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset='utf-8'>
-    <link rel="stylesheet" href="body{.css">
+    <link rel="stylesheet" href="estilo.css">
 
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
