Commit com animações

--- a/Curriculo.html
+++ b/Curriculo.html
@@ -4,22 +4,29 @@
 <head>
     <meta charset='utf-8'>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="animacao.css">
+    <script type="text/javascript" src="jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="Curriculo.js"></script>
 
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <title>Curriculo</title>
     <script src='main.js'></script>
 </head>
 
 <body>
     <div id="DivGG">
+        <div class="background"></div>
+        <div class="box">
+            <div class="close">X</div>Este é o lightbox</div>
+
         <div id="Nome" class="textoCentralizado">
             <h1>Gabriel de Oliveira do Nascimento</h1>
         </div>
         <div id="ParteEsquerda">
             <div id="Habilidades" class="textoCentralizado">
-                <p><b>HABILIDADES</b></p>
+                <a href="#" class="Habilidades">
+                    <p><b>HABILIDADES</b></p>
+                </a>
                 <p><b>Linguagens intermediárias em programação</b></p>
                 <p>Java, C, Arduino</p>
                 <p><b>Linguagens de nivel básico</b></p>
@@ -34,8 +41,7 @@
                 <p><b>Periodo:  Março/2020</b></p>
                 <p><b>Bematech</b></p>
                 <p><b>Funções</b></p>
-                Abrir uma nova página se for possivel: Primeiramente ganhamos cursos para o aprimoramento profissional,
-                neste curso abordamos várias situações que aconteceria no mundo real
+                Abrir uma nova página se for possivel: Primeiramente ganhamos cursos para o aprimoramento profissional, neste curso abordamos várias situações que aconteceria no mundo real
                 <p><b>Periodo: Maio/2017 a Fevereiro/2020</b></p>
             </div>
             <div id="Formacao" class="textoCentralizado">
@@ -54,8 +60,10 @@
                 <p>gabrielolivernas@gmail.com</p>
                 <p><b>Telefone</b></p>
                 <p>(41) 9 8888-xxxx</p>
-                <a target="_blanck" href="http://linkedin.com/in/gabriel-oliveira-8a3135164"><p><b>url Linkedln</b></p></a>
-           </div>
+                <a target="_blanck" href="http://linkedin.com/in/gabriel-oliveira-8a3135164">
+                    <p><b>url Linkedln</b></p>
+                </a>
+            </div>
             <div id="Referências" class="textoCentralizado">
                 <p><b>Referências</b></p>
                 <p><b>Márcio Gonçalves</b></p>
