--- a/Curriculo.html
+++ b/Curriculo.html
@@ -27,7 +27,7 @@
                 <a href="#" class="Habilidades">
                     <p><b>HABILIDADES</b></p>
                 </a>
-                <p><b>Linguagens intermediárias em programação</b></p>
+                <p><b>Linguagens intermediárias em programação:</b></p>
                 <p>Java, C, Arduino</p>
                 <p><b>Linguagens de nivel básico</b></p>
                 <p>Html 5, CSS 3, PHP, C#</p>
