Organização em pastas

--- a/Curriculo.html
+++ b/Curriculo.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset='utf-8'>
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="animacao.css">
-    <script type="text/javascript" src="jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="Curriculo.js"></script>
+    <link rel="stylesheet" href="EstilosCSS/estilo.css">
+    <link rel="stylesheet" href="EstilosCSS/animacao.css">
+    <script type="text/javascript" src="EstilosJS/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="EstilosJS/Curriculo.js"></script>
 
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Curriculo</title>
